--- a/app/templates/layout-Navbar.html
+++ b/app/templates/layout-Navbar.html
@@ -1,7 +1,7 @@
 {% extends "layout-General.html" %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container-fluid">
     <a class="navbar-brand" href="/"><i class="fas fa-recycle fa-3x"></i></a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
