--- a/app/templates/registro.html
+++ b/app/templates/registro.html
@@ -33,8 +33,8 @@
             </div>
 
             <!-- 1 -->
-            <div class="col-12">
-              <h5>¿Cuántas veces a la semana consumes productos pecuarios? (carne roja, cerdo, pollo, pescado, huevos, productos lácteos)</h5>
+            <div class="col-12 my-3">
+              <h5>¿Cuántas veces a la semana consumes productos pecuarios? (carne roja, pescado, huevos, productos lácteos)</h5>
               <select class="form-select" name="Quest1" style="background-color: #bff3db;">
                 <option value=5>Nunca</option>
                 <option value=4>Menos de 3 o 4 días</option>
@@ -44,7 +44,7 @@
             </div>
 
             <!-- 2 -->
-            <div class="col-12">
+            <div class="col-12 my-3">
               <h5>¿Qué cantidad de tus desechos reciclas? (vidrio, latas y aluminio, papel y cartón, envases de cartón para bebida y plásticos)</h5>
               <select class="form-select" name="Quest2" style="background-color: #bff3db;">
                 <option value=5>Reciclo todo lo que puedo</option>
@@ -55,7 +55,7 @@
             </div>
 
             <!-- 3 -->
-            <div class="col-12">
+            <div class="col-12 my-3">
               <h5>¿Con que frecuencia utilizas plásticos de un solo uso? (Cubiertos de plástico desechables, bolsas y envases plásticos desechables, etc.)</h5>
               <select class="form-select" name="Quest3" style="background-color: #bff3db;">
                 <option value=5>Nunca</option>
@@ -66,7 +66,7 @@
             </div>
 
             <!-- 4 -->
-            <div class="col-12">
+            <div class="col-12 my-3">
               <h5>¿Cuánta parte de los alimentos que consumes son productos locales no procesados (envasados)?</h5>
               <select class="form-select" name="Quest4" style="background-color: #bff3db;">
                 <option value=5>La totalidad</option>
@@ -77,7 +77,7 @@
             </div>
 
             <!-- 5 -->
-            <div class="col-12">
+            <div class="col-12 my-3">
               <h5>¿Cuánta atención le prestas al cuidado de la electricidad?</h5>
               <select class="form-select" name="Quest5" style="background-color: #bff3db;">
                 <option value=5>Le presto mucha atención (Eficiencia de los electrodomésticos)</option>
@@ -87,7 +87,7 @@
             </div>
 
             <!-- 6 -->
-            <div class="col-12" >
+            <div class="col-12 my-3" >
               <h5>¿Cuánta atención le prestas al cuidado del agua?</h5>
               <select class="form-select" name="Quest6" style="background-color: #bff3db;">
                 <option value=5>Mucha atención (Reutilizo toda la que puedo)</option>
@@ -97,7 +97,7 @@
             </div>
 
             <!-- 7 -->
-            <div class="col-12">
+            <div class="col-12 my-3">
               <h5>Respecto al transporte ¿Qué sueles utilizar?</h5>
               <select class="form-select" name="Quest7" style="background-color: #bff3db;">
                 <option value=5>Vehículos de tracción humana o caminata (Bicicleta, Patines, etc.)</option>
@@ -110,7 +110,7 @@
             </div>
 
             <!-- 8 -->
-            <div class="col-12">
+            <div class="col-12 my-3">
               <h5>Respecto a la compra de productos no consumibles (Ropa, Electrónica, Juguetes, etc.)</h5>
               <select class="form-select" name="Quest8" style="background-color: #bff3db;">
                 <option value=5>Compro productos de segunda mano</option>
