--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="body">
-  <div class="container" style="width: 100%;">
+  <div class="container" style="width: 100%; heigth: 100%;">
     {% with messages = get_flashed_messages()%}
       {% if messages %}
         {% for message in messages %}
