--- a/app/templates/registro.html
+++ b/app/templates/registro.html
@@ -123,7 +123,7 @@
 
             <input class="btn btn-primary btn-lg btn-block" type="submit"  value="Registrate">
           </form>
-          <!-- <p class="mt-2">¿Ya te has registrado? <a href="/">Ingresa aquí</a></p> --->
+          <p class="mt-2">¿Ya te has registrado? <a href="/">Ingresa aquí</a></p>
         </div>
       </div>
     </div>
